# portfolio-ultime-app

./: .coveragerc  .gitignore  Dockerfile  README.md  Taskfile.yaml  atlas.hcl  devbox-ci.json  devbox.json  kind.yaml  pyproject.toml  pytest.ini  units-test-report.html
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
app/: __init__.py  app.py  requirements.txt
app/instance/: todos.db
app/static/css/: input.css  style.css
app/templates/: base.html  todo_list.html
charts/todolist/: Chart.yaml  values.yaml
charts/todolist/templates/: deployment.yaml  ingress.yaml
instance/: todos.db
kubernetes/: app.yaml
migrations/: 20251007142504.sql  atlas.sum
scripts/: run-integration-tests.sh  run-regression-tests.sh  run-smoke-test.sh  run-units-tests.sh
tests/: .coverage  conftest.py  integration.py  regression.py  requirements-dev.txt  units.py
