[project]
# Configuration du projet
name = "todolist"
version = "0.1.10"
description = "A simple todo list application"
authors = [
    {name = "naqa92", email = "naqa92@users.noreply.github.com"},
]
requires-python = ">=3.13"

[tool.ruff]
# Configuration minimale pour Ruff
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Ignorer E402 (module level import not at top of file) dans les tests
per-file-ignores = { "tests/*.py" = ["E402"] }